Bug 143959. Undo previous temporary fix. Fix (and document) nsBoxReflowState::Unwind to propagate the _root_ box through the recursion. r=dbaron, sr=kin